<resources>
    <string name="app_name">InsCure</string>
    <string name="welcome">Welcome to</string>
    <string name="copyright">Copyright @2024</string>

    <!-- Title menu xml -->
    <string name="refresh">Refresh</string>
    <string name="blank" translatable="false">" "</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>

    <!-- Content Description layout xml -->
    <string name="open_cam">Open Cam</string>
    <string name="btn_gallery">Choose an Image from Gallery</string>
    <string name="btn_shutter_camera">Take photo</string>
    <string name="btn_switch_camera">Rotate camera</string>
    <string name="avatar">Default Avatar Image</string>
    <string name="btn_camera_back">Button back homescreen</string>

    <!-- UI Error -->
    <string name="empty_story_description">Description must be filled</string>
    <string name="empty_email_password">Email and Password must be filled</string>
    <string name="validation_invalid_email">Email format invalid</string>
    <string name="validation_empty_email_password_name">Name, Email, and Password must be filled</string>
    <string name="validation_password_rules">Password must contain at least 8 characters</string>
    <string name="info_successful_register_user">User registration success, redirect you to login page</string>
    <string name="error_permission_denied">Permission Denied</string>
    <string name="error_take_photo">Failed take a picture</string>

    <!-- Constant Value text -->
    <string name="dummy_text" translatable="false">Dummy Text</string>
    <string name="person_name" translatable="false">Person Name</string>
    <string name="txt_login">Login</string>
    <string name="txt_email" translatable="false">Email</string>
    <string name="txt_password" translatable="false">Password</string>
    <string name="txt_auth_question_login">No account :( ?</string>
    <string name="txt_register">Register</string>
    <string name="txt_auth_question_register">I have an account :)</string>
    <string name="txt_name">Name</string>
    <string name="txt_preview_carousel">"My skin looks like one of these?"</string>
    <string name="txt_skin">Skin?</string>

    <!-- Button text layout xml -->
    <string name="btn_txt_ok">ok</string>
    <string name="btn_txt_signin">Sign In</string>
    <string name="btn_txt_signup">Sign Up</string>
    <string name="btn_txt_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>