<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:padding="24dp"
            android:src="@drawable/inscure"/>

        <TextView
            android:id="@+id/label_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/pink_secondary"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_auth"
        android:layout_below="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="auth"/>

        <com.bangkit.inscure.ui.custom.EditTextClear
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_form_input"
            android:hint="@string/txt_name"
            android:drawableStart="@drawable/person_24px"
            android:drawableTint="@color/secondary_light"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:transitionName="email"/>

        <com.bangkit.inscure.ui.custom.EditTextEmail
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_form_input"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:transitionName="email"/>

        <com.bangkit.inscure.ui.custom.EditTextClear
            android:id="@+id/ed_register_notelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_form_input"
            android:drawableStart="@drawable/ic_call_24px"
            android:drawableTint="@color/secondary_light"
            android:hint="@string/txt_phone"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:transitionName="email"/>

        <com.bangkit.inscure.ui.custom.EditTextPassword
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_form_input"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:transitionName="password"/>

        <LinearLayout
            android:id="@+id/container_misc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:transitionName="misc">

            <TextView
                android:id="@+id/label_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_auth_question_register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_login"
                android:textColor="@color/pink_secondary"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_signin_button"
            android:text="@string/btn_txt_signup"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="action"
            app:backgroundTint="@null"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lotiie_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-90dp"
            android:visibility="invisible"
            app:lottie_rawRes="@raw/loading_second_anim"
            app:lottie_loop="true"
            app:lottie_autoPlay="false"/>
    </LinearLayout>


</RelativeLayout>