<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="34dp"
        android:paddingVertical="34dp"
        android:background="@drawable/custom_bg_home">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spa_24px"
            android:contentDescription="@string/app_name"
            app:tint="@color/white" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/person_24px"
            android:contentDescription="@string/nav_profile"
            app:tint="@color/white"
            android:background="@null"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_below="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_below="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_carousel"
        android:layout_below="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="34dp"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:id="@+id/icon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/zoom_in_24px"
                app:tint="@color/purple_light_secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_skin"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/purple_light_secondary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/title_desc"
            android:layout_below="@+id/icon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_preview_carousel"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:id="@+id/recycler"
        android:layout_below="@+id/title_carousel"
        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"/>

</RelativeLayout>